Analizador lexico para traduccion Python, cambio en peticion POST, ahora se retorna resultados en formato json.

--- a/[OLC1]Proyecto2_201602625/frontend/index.html
+++ b/[OLC1]Proyecto2_201602625/frontend/index.html
@@ -60,7 +60,7 @@
                     <!-- EDITOR 1 -->
                     <textarea id="editor"></textarea>
                     <span>
-                        <button class="button1" onclick="Traducir()">ANALIZAR Y TRADUCIR</button>
+                        <button class="button1" onclick="Ejecutar()">ANALIZAR Y TRADUCIR</button>
                     </span>   
                     <!-- FIN EDITOR 1 -->                 
                 </div>                   
