Se integro traductor python a rest api, se arreglo reconocimiento y traduccion de comentarios en jison.

--- a/[OLC1]Proyecto2_201602625/frontend/index.html
+++ b/[OLC1]Proyecto2_201602625/frontend/index.html
@@ -33,7 +33,7 @@
                         <button onclick="Descargar()" class="dropbtn">Descargar</button>
                         <div id="myDropdown2" class="dropdown-content">
                         <a class="dropitem" onclick="TraduccionJS()">JavaScript</a>
-                          <a class="dropitem" onclick="DescargarPython()">Python</a>
+                          <a class="dropitem" onclick="TraduccionPy()">Python</a>
                         </div>
                     </div> 
                 </div>
