Se arreglaron algunos detalles en la traducción, se implemento la funcion Ejecutar en los 4 tabs. Se genera reporte de tokens y errores en traductor python.

--- a/[OLC1]Proyecto2_201602625/frontend/index.html
+++ b/[OLC1]Proyecto2_201602625/frontend/index.html
@@ -68,7 +68,7 @@
                     <!-- EDITOR 2 -->
                     <textarea id="editor2"></textarea>
                     <span>
-                        <button class="button2" onclick="">ANALIZAR Y TRADUCIR</button>
+                        <button class="button2" onclick="Ejecutar2()">ANALIZAR Y TRADUCIR</button>
                     </span>
                     <!-- FIN EDITOR 2 -->
                 </div>
@@ -76,7 +76,7 @@
                     <!-- EDITOR 3 -->
                     <textarea id="editor3"></textarea>
                     <span>
-                        <button class="button3" onclick="">ANALIZAR Y TRADUCIR</button>
+                        <button class="button3" onclick="Ejecutar3()">ANALIZAR Y TRADUCIR</button>
                     </span>
                     <!-- FIN EDITOR 3 -->
                 </div> 
@@ -84,7 +84,7 @@
                     <!-- EDITOR 4 -->
                     <textarea id="editor4"></textarea>
                     <span>
-                        <button class="button4" onclick="">ANALIZAR Y TRADUCIR</button>
+                        <button class="button4" onclick="Ejecutar4()">ANALIZAR Y TRADUCIR</button>
                     </span>
                     <!-- FIN EDITOR 4 -->
                 </div> 
