--- a/[OLC1]Proyecto2_201602625/frontend/index.html
+++ b/[OLC1]Proyecto2_201602625/frontend/index.html
@@ -60,7 +60,7 @@
                     <!-- EDITOR 1 -->
                     <textarea id="editor"></textarea>
                     <span>
-                        <button class="button1" onclick="Ejecutar()">ANALIZAR Y TRADUCIR</button>
+                        <button class="button1" onclick="Traducir()">ANALIZAR Y TRADUCIR</button>
                     </span>   
                     <!-- FIN EDITOR 1 -->                 
                 </div>                   
@@ -68,7 +68,7 @@
                     <!-- EDITOR 2 -->
                     <textarea id="editor2"></textarea>
                     <span>
-                        <button class="button2" onclick="Ejecutar2()">ANALIZAR Y TRADUCIR</button>
+                        <button class="button2" onclick="Traducir2()">ANALIZAR Y TRADUCIR</button>
                     </span>
                     <!-- FIN EDITOR 2 -->
                 </div>
@@ -76,7 +76,7 @@
                     <!-- EDITOR 3 -->
                     <textarea id="editor3"></textarea>
                     <span>
-                        <button class="button3" onclick="Ejecutar3()">ANALIZAR Y TRADUCIR</button>
+                        <button class="button3" onclick="Traducir3()">ANALIZAR Y TRADUCIR</button>
                     </span>
                     <!-- FIN EDITOR 3 -->
                 </div> 
@@ -84,7 +84,7 @@
                     <!-- EDITOR 4 -->
                     <textarea id="editor4"></textarea>
                     <span>
-                        <button class="button4" onclick="Ejecutar4()">ANALIZAR Y TRADUCIR</button>
+                        <button class="button4" onclick="Traducir4()">ANALIZAR Y TRADUCIR</button>
                     </span>
                     <!-- FIN EDITOR 4 -->
                 </div> 
